--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,400;0,9..40,500;0,9..40,600;0,9..40,700;1,9..40,300&family=League+Spartan:wght@300;500;700&family=Poppins:wght@600&family=Quicksand:wght@300;400;500;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,400;0,9..40,500;0,9..40,600;0,9..40,700;1,9..40,300&family=League+Spartan:wght@300;500;700&family=Poppins:wght@600&family=Quicksand:wght@300;400;500;600family=Spartan:wght@300;400;500;600&display=swap');
 :root {
     --green:#088178;
     --black:#222222;
